2011-02-20  Kevin B. Kenny  <kennykb@acm.org>

	* library/tdbc.tcl:
			Changed 'foreach' method on the connection, statement
			and result set objects so that 'foreach' and 'allrows'
			will iterate over multiple result sets.  Added
			default 'nextresults' method (does nothing, reports
			that no further results are available) and
			'outputparams' method (does nothing, reports no
			output parameters) to the base 'resultset' class so
			that drivers that lack multiple-results functionality
			need not implement these.
	* doc/tdbc_resultset.n:
			Added description of the 'nextresults' method,
			and its effect on 'allrows' and 'foreach'

2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc.n, doc/tdbc_connection.n, doc/tdbc_mapSqlState.n:
	* doc/tdbc_resultset.n, doc/tdbc_statement.n, doc/tdbc_tokenize.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives. Thanks to Konstantin
	Kohmoutov for reporting and diagnosing this error.
	
2011-01-23  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in: Changed to put the absolute path name of the
	                source directory in tdbc_INCLUDE_PATH so that
	                drivers will build correctly against an uninstalled
	                tdbc. Thanks to Konstantin Khomoutov for reporting
	                this error.
	* configure:    autoconf2.59

2010-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_connection.n:
			Added description of the new 'primarykeys' and
			'foreignkeys' methods to the manual.

	* library/tdbc.tcl:
			Revised the 'keySequence' column in 'foreignkeys'
			to be 'ordinalPosition' instead, for consistency
			with 'primarykeys'

	* configure.in:
	* Makefile.in:
	* pkgIndex.tcl.in (new file):
	* README:
	* tdbcConfig.sh.in:
	* generic/tdbc.h:
	* tclconfig/:	Upgraded the build to use TEA 3.9. Changed the
			approach to pkgIndex.tcl generation. (It's now built
			at configure time, rather than from the Makefile.)